--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     defaultConfig {
         applicationId "kaufland.com.todo"
         minSdkVersion 23
@@ -16,15 +16,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "com.android.support.constraint:constraint-layout:1.0.2"
-    implementation "com.android.support:design:26.1.0"
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    compile "android.arch.lifecycle:extensions:1.0.0"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    compile 'android.arch.lifecycle:extensions:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     testImplementation 'junit:junit:4.12'
