--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:label="@string/title_activity_all_todos"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".AllGoals"
+            android:name=".ui.goal.AllGoals"
             android:label="@string/title_activity_all_goals"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
