--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:label="@string/title_activity_add_date_for_goal"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.todo.AllTodos"
+            android:name=".ui.todo.AllTodosActivity"
             android:label="@string/title_activity_all_todos"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
